@@ -1,6 +1,5 @@
-&timesteps
-tinc = 1.0/
-&file_paras
-ninst=1/
-g_land.gli
+[parameters]
+time-step = 1.0
+instance filenames:  g_land.gli
+
 
