@@ -71,7 +71,7 @@ module glimmer_config
 
   interface GetValue
      module procedure GetValueReal, GetValueInt, GetValueChar, GetValueRealArray, GetValueIntArray, &
-          GetValueDouble, GetValueDoubleArray
+          GetValueDouble, GetValueDoubleArray, GetValueCharArray
   end interface
 
 contains
@@ -356,6 +356,42 @@ contains
        val = tempval(1:i)
     end if
   end subroutine GetValueIntArray
+
+  !--------------------------------------------------------------------------
+
+  subroutine GetValueCharArray(section,name,val,numval)
+    !*FD get character array value
+    implicit none
+    type(ConfigSection), pointer :: section
+    character(len=*),intent(in) :: name
+    character(*), pointer, dimension(:) :: val
+    integer,intent(in), optional :: numval
+
+    ! local variables
+    character(len=valuelen) :: value
+    character(80), dimension(:),allocatable :: tempval
+    integer ios,i,numv
+
+    if (present(numval)) then
+       numv=numval
+    else
+       numv=100
+    end if
+    allocate(tempval(numv))
+    value=''
+    call GetValueChar(section,name,value)
+    if (value.eq.'') return
+    read(value,*,end=20) (tempval(i),i=1,numv)
+20  i=i-1
+
+    if (i.ge.1) then
+       if (associated(val)) then
+          deallocate(val)
+       end if
+       allocate(val(i))
+       val = tempval(1:i)
+    end if
+  end subroutine GetValueCharArray
 
   !--------------------------------------------------------------------------
 
